# cpp-obfuscator

./: .gitignore  .gitmodules  3RD-PARTY.md  LICENSE  README.md  azure-pipelines.yml  obfuscator.hpp
obfuscator/: obfuscator.hpp
obfuscator/impl/: random.hpp  sequence.hpp  string.hpp  string_obfs.hpp
obfuscator/obfs/: fsm.hpp  random.hpp  sequence.hpp  string.hpp
sample/: CMakeLists.txt  random.cpp  state_machine.cpp  string_obfs.cpp
script/: Dockerfile.bionic  azure-pipelines-template-mac.yml  azure-pipelines-template-unix.yml  azure-pipelines-template-win.yml  merge.py
test/: CMakeLists.txt  string_obfs_tester.py
test/impl/: fsm.cpp  random.cpp  sequence.cpp  string.cpp  string_obfs.cpp
